# gappy

./: .gitignore  .readthedocs.yml  CHANGES.rst  README.rst  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: api.rst  conf.py  index.rst
docs/_static/: custom.css
gappy/: __init__.py  conftest.py  context_managers.py  core.pxd  core.pyx  element.pxd  element.pyx  exceptions.py  gap_functions.py  gap_globals.py  gap_includes.pxd  gapobj.pxd  gapobj.pyx  gmp.pxd  libgap.pyx  operations.py  utils.py  utils.pyx  version.py
gappy/_dev/: __init__.py  scm_version.py
tests/: conftest.py  test_long.py  test_misc.py
