[metadata]
name = gappy
author = E. Madison Bray
author-email = embray@lri.fr

[options]
# We set packages to find: to automatically find all sub-packages
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires = psutil

[options.packages.find]
exclude = gappy._dev

[options.extras_require]
tests =
    pytest
    pytest-cython
    pytest-doctestplus
    setuptools_scm

[tool:pytest]
addopts =
    --doctest-cython
    --doctest-modules
    --doctest-plus
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
filterwarnings =
    ignore:Using or importing the ABCs from 'collections'
