[metadata]
name = gappy
author = E. Madison Bray
author-email = embray@lri.fr
description = Python interface to GAP
long_description = file: README.rst
license_files = LICENSE

[options]
# We set packages to find: to automatically find all sub-packages
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    cysignals
    psutil

[options.packages.find]
exclude = gappy._dev

[options.package_data]
gappy = *.pxd

[options.extras_require]
tests =
    pytest
    pytest-cython
    pytest-doctestplus
    setuptools_scm
docs =
    Sphinx

[tool:pytest]
addopts =
    -m 'not long'
    --doctest-cython
    --doctest-modules
    --doctest-plus
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
filterwarnings =
    ignore:Using or importing the ABCs from 'collections'
markers =
    long: mark a test as taking a long time
