[metadata]
name = gappy-system
author = E. Madison Bray
author-email = embray@lri.fr
description = Python interface to GAP
url = https://github.com/embray/gappy
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
license = GPLv3+
license_files = LICENSE
platform = linux
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Cython
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Mathematics

[options]
# We set packages to find: to automatically find all sub-packages
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    cysignals
    psutil

[options.packages.find]
exclude = gappy._dev

[options.package_data]
gappy = *.pxd, *.pyx

[options.extras_require]
tests =
    numpy
    pytest
    pytest-cython>=0.1.1
    pytest-doctestplus
    setuptools_scm
docs =
    Sphinx

[tool:pytest]
addopts =
    -m 'not long'
    --doctest-cython
    --doctest-modules
    --doctest-plus
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
# 1) ignore warning that can come from older versions of virtualenv
# 2) ignore warning from setuptools_scm when running on CI
filterwarnings =
    ignore:Using or importing the ABCs from 'collections'
    ignore:.*is shallow and may cause errors
markers =
    long: mark a test as taking a long time
